<resources>
    <string name="app_name">Contact Recycleview</string>
    <string name="contact_name">Tên</string>
    <string name="contact_phone">Số điện thoại</string>
    <string name="contact">Contact</string>
    <string name="changed">Chuyển đổi giao diên</string>
    <string name="add_contact">Add Contact</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="phonename">PhoneName</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="show_contact">Show Contact</string>
</resources>
