<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    <rikkeisoft.nguyenducdung.com.contactrecycleview.custom.CustomTextView
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/contact_size"
        android:gravity="center"
        android:id="@+id/tv_contact"
        android:text="@string/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Switch
        android:id="@+id/st_changed"
        android:layout_marginBottom="12dp"
        android:text="@string/changed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageButton
        android:background="@drawable/btn_add_contact"
        android:id="@+id/btn_add_contact"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:layout_gravity="left"
        android:layout_marginBottom="12dp"
        android:src="@android:drawable/ic_input_add" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_contact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/rc_size"></android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:visibility="invisible"
            android:layout_marginRight="@dimen/btn_margin"
            android:background="@drawable/btn_dialog"
            android:id="@+id/btn_delete"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:visibility="invisible"
            android:background="@drawable/btn_dialog"
            android:id="@+id/btn_save"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>